Update UserRepository and UserRepositoryTest